Fixing spacing on pages

--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -1,5 +1,4 @@
 .video-container{
     display: flex;
     align-items:center;
-    height: 90vh;
 }
